# IPCM

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nebula/module/ipcm/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nebula/module/ipcm/demo/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/nebula/module/ipcm/demo/: ExampleUnitTest.kt
ipcm/: CMakeLists.txt  build.gradle
ipcm/src/main/: AndroidManifest.xml
ipcm/src/main/cpp/: IPCM.cpp  IPCM.h  Logger.cpp  ThreadLock.cpp  ThreadLock.h  bridge.cpp  constant.h  file_lock.cpp  file_lock.h  ipc_buffer.cpp  ipc_buffer.h  ipcm.cpp  ipcm.h  logger.cpp  logger.h  meta_info.h  mmap_file.cpp  mmap_file.h  out_data.cpp  out_data.h  proto_buff_coder.cpp  proto_buff_coder.h  sink_data.cpp  sink_data.h  source_data.cpp  source_data.h  thread_lock.cpp  utils.h
ipcm/src/main/java/com/nebula/module/ipcm/: IPCM.java
